# fontlugat

./: .gitignore  Cargo.toml  README.md  fonts.html  template.html
fonts/Karla/: fonts.html
src/: fontlugat.rs  fonts.rs  main.rs  main.rs.bak  main_2.rs  old.rs.bak
src/gui/: component.rs  gui.rs  mod.rs
src/lib/: css.rs  dir.rs  entry.rs  font.rs  init.rs  mod.rs  old.rs  scan_dir.rs  template.rs  unzip.rs
src/templates/: component.header.html  fonts.css  main.css  part.body.html  part.fonts.html  part.head.html  template.font.html  template.footer.html  template.header.html  template.html  test.html
