[package]
name = "fontlugat"
version = "0.2.0"
authors = ["Fatih Gozenc <fatihgozenc@gmail.com>"]
edition = "2018"
description = "A simple font explorer written in Rust."
repository = "https://github.com/fatihgozenc/fontlugat"

[package.metadata.bundle]
name = "Fontlugat"
osx_minimum_system_version = "env=MACOSX_DEPLOYMENT_TARGET=10.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
open = "1.4.0"
zip = "0.5.11"
druid = "0.7.0"
web-view = "0.7"
font-kit = "0.10.0"
fontdue = "0.4.0"